# cha_hae_in

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: build.yaml
migrations/: Cargo.toml  README.md
migrations/src/: main.rs
src/: config.rs  main.rs  types.rs  utils.rs
src/commands/: anime.rs  clear.rs  manga.rs  mod.rs  music.rs  nasa.rs  ping.rs
src/commands/clear/: mod.rs
src/commands/nasa/: mod.rs
src/commands/ping/: mod.rs
src/database/: connection.rs
src/embeds/: anime.rs  manga.rs  mod.rs  nasa.rs
src/services/: anime.rs  jikan.rs  mod.rs  nasa.rs
