[package]
name = "chahaein"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
config = "0.15.4"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
poise = "0.6.1"
serde = "1.0.216"
serenity = "0.12.4"
reqwest = { version="0.12.9", features = ["json"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
