[package]
edition = "2021"
name = "chahaein"
version = "0.1.0"

[workspace]
members = [".", "migrations"]

[dependencies]
chrono = "0.4.39"
config = "0.15.4"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
poise = "0.6.1"
reqwest = {version = "0.12.9", features = ["json"]}
sea-orm = {version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"]}
serde = "1.0.216"
serenity = "0.12.4"
tokio = {version = "1.21.2", features = ["macros", "rt-multi-thread"]}
